# stakka

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  VERSIONING.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  vite.config.ts
.claude/: settings.json
.claude/hooks/: combined-guard.sh  secrets-guard.sh
.github/workflows/: deploy.yml
src/: animations.ts  audio.ts  board.ts  effects.ts  game.ts  input.ts  layout.ts  main.ts  piece.ts  randomizer.ts  renderer.ts  scoring.ts  settings.ts  srs.ts  storage.ts  style.css  theme.ts  touch.ts  types.ts  ui.ts
src/__tests__/: animations.test.ts  audio.test.ts  board.test.ts  drop.test.ts  effects.test.ts  game-state.test.ts  hold.test.ts  input.test.ts  layout.test.ts  piece.test.ts  randomizer.test.ts  scoring.test.ts  settings.test.ts  srs.test.ts  storage.test.ts  theme.test.ts  touch.test.ts  ui.test.ts
